--- a/src/main/res/layout/feburary.xml
+++ b/src/main/res/layout/feburary.xml
@@ -9,7 +9,7 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/monthlist"
+        android:id="@+id/monthlist2"
         android:layout_centerHorizontal="true"
         ></Spinner>
 
@@ -184,21 +184,6 @@
         android:text="28"
         android:paddingLeft="175dp"
         android:paddingTop="430dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="29"
-        android:paddingLeft="255dp"
-        android:paddingTop="430dp"
-        android:id="@+id/textView6" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="30"
-        android:paddingTop="430dp"
-        android:layout_alignParentTop="true"
-        android:paddingLeft="335dp"
-        android:id="@+id/textView7" />
     <ProgressBar
         android:layout_width="48dp"
         android:layout_height="48dp"
@@ -264,24 +249,6 @@
         android:progress="1"
         android:progressDrawable="@drawable/circle"
         android:layout_marginLeft="160dp"
-        android:layout_marginTop="415dp" />
-    <ProgressBar
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:max="8"
-        style="?android:progressBarStyleHorizontal"
-        android:progress="0"
-        android:progressDrawable="@drawable/circle"
-        android:layout_marginLeft="240dp"
-        android:layout_marginTop="415dp" />
-    <ProgressBar
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:max="8"
-        style="?android:progressBarStyleHorizontal"
-        android:progress="5"
-        android:progressDrawable="@drawable/circle"
-        android:layout_marginLeft="320dp"
         android:layout_marginTop="415dp" />
     <ProgressBar
         android:layout_width="48dp"
@@ -463,22 +430,6 @@
         android:progressDrawable="@drawable/circle"
         android:layout_marginLeft="320dp"
         android:layout_marginTop="41dp" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="31"
-        android:paddingTop="500dp"
-        android:layout_alignParentTop="true"
-        android:paddingLeft="15dp"
-        />
-    <ProgressBar
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:max="8"
-        style="?android:progressBarStyleHorizontal"
-        android:progress="6"
-        android:progressDrawable="@drawable/circle"
-        android:layout_marginTop="495dp" />
 
 
 
