--- a/src/main/res/layout/november.xml
+++ b/src/main/res/layout/november.xml
@@ -9,7 +9,7 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/monthlist"
+        android:id="@+id/monthlist11"
         android:layout_centerHorizontal="true"
         ></Spinner>
 
@@ -463,23 +463,6 @@
         android:progressDrawable="@drawable/circle"
         android:layout_marginLeft="320dp"
         android:layout_marginTop="41dp" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="31"
-        android:paddingTop="500dp"
-        android:layout_alignParentTop="true"
-        android:paddingLeft="15dp"
-        />
-    <ProgressBar
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:max="8"
-        style="?android:progressBarStyleHorizontal"
-        android:progress="6"
-        android:progressDrawable="@drawable/circle"
-        android:layout_marginTop="495dp" />
-
 
 
 
